--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
-							<!-- <li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li> -->
+							<li><a href="personal.html">Bio</a></li>
+							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/RohanBh38776826" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -61,9 +61,9 @@
 									</p>
 								</header>
 								<a href="" class="image main"><img src="images/galaxy.jpeg" alt="" /></a>
-								<ul class="actions special">
+								<!-- <ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
+								</ul> -->
 							</article>
 
 						<!-- Posts -->
@@ -71,54 +71,52 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 24, 2017</span> -->
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2>
+											<a href="#">Reservily<br />	</a>
+										</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/reserve1.jpeg" alt="" /></a>
+									<p>A Hotel Reservation portal. One stop shop for all your software needs</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<!-- <li><a href="#" class="button">Full Story</a></li> -->
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">April 22, 2017</span> -->
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="#">Algorithms<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
+									<a href="#" class="image fit"><img src="images/algos.jpeg" alt="" /></a>
+									<p>Workig representation of various Algorithms.</p>
+									<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									</ul> -->
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">April 18, 2017</span> -->
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="#">System Engineering<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
+									<a href="#" class="image fit"><img src="images/system.jpeg" alt="" /></a>
+									<p>How to engineer/design a system while handling scaling challenges!</p>
+									<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									</ul> -->
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">April 14, 2017</span> -->
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="#">Machine Learning<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
+									<a href="#" class="image fit"><img src="images/machine.jpeg" alt="" /></a>
+									<p>Some projects that I host on AWS which involve using machine learning alogrigthms</p>
+									<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									</ul> -->
 								</article>
-								<article>
+								<!-- <article>
 									<header>
-										<!-- <span class="date">April 11, 2017</span> -->
+										<span class="date">April 11, 2017</span>
 										<h2><a href="#">Odio magna<br />
 										sed consectetur</a></h2>
 									</header>
@@ -127,10 +125,10 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
-								<article>
+								</article> -->
+								<!-- <article>
 									<header>
-										<!-- <span class="date">April 7, 2017</span> -->
+										<span class="date">April 7, 2017</span>
 										<h2><a href="#">Augue lorem<br />
 										primis vestibulum</a></h2>
 									</header>
@@ -139,7 +137,7 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
+								</article> -->
 							</section>
 
 						<!-- Footer -->
@@ -182,8 +180,8 @@
 								</ul>
 							</form> -->
 							<section>
-								<h3>Socials</h3>
-								<ul class="icons alt">
+								<h3 style="text-align: center;">Socials</h3>
+								<ul class="icons alt", style="text-align: center;">
 									<li><a href="https://twitter.com/RohanBh38776826" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://github.com/rohanbsher" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="www.linkedin.com/in/rohanbhandariuofsc" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
