--- a/personal.html
+++ b/personal.html
@@ -44,15 +44,15 @@
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h1>Sherpur, Punjab<br /></h1>
-									<p>I moved from sherpur, punjab to attend UofSC and pursue International Business but switched it first semester 
+									<p>I moved from sherpur, punjab to attend UofSC and pursue International Business but switched majors first semester 
 										and instead graduated with Computer Engineering.
 									</p>
 									<p>
-										I love learning for the sake of it. I think actively seeking out knowledge and applying it practically provides a framework to understand the bigger picture use technology to address a lot of societal problems/changes/needs. 
+										I love learning for the sake of it. I think actively seeking out knowledge and applying it practically provides a framework to understand the bigger picture. This lets you build truly intutive products that people enjoy using. 
 									</p>
 								</header>
-								<div class="image main"><img src="images/sherpur.jpeg" alt="" /></div>
-								<p>This is where I come from. Sherpur is a village in Punjab, India with is primary occupation being agricutlure.</p>
+								<a href="" class="image main"><img src="images/sherpur.jpeg" alt="" /></a>
+								<p>This is where I come from. Sherpur is a village in Punjab, India with primary occupation being agriculture.</p>
 							</section>
 
 					</div>
