--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 								<ul class="icons alt", style="text-align: center;">
 									<li><a href="https://twitter.com/RohanBh38776826" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://github.com/rohanbsher" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="www.linkedin.com/in/rohanbhandariuofsc" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+									<li><a href="https://linkedin.com/in/rohanbhandariuofsc" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 								</ul>
 							</section>
 						</section>
