--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 										<!-- <span class="date">April 22, 2017</span> -->
 										<h2><a href="#">Algorithms<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/algos.jpeg" alt="" /></a>
-									<p>Workig representation of various Algorithms.</p>
+									<a href="https://github.com/rohanbsher/algorithms" class="image fit"><img src="images/algos.jpeg" alt="" /></a>
+									<p>Working models for Various Sorting Algorithms.</p>
 									<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul> -->
