--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 										<!-- <span class="date">April 14, 2017</span> -->
 										<h2><a href="#">Machine Learning<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/machine.jpeg" alt="" /></a>
-									<p>Some projects that I host on AWS which involve using machine learning alogrigthms</p>
+									<a href="https://github.com/rohanbsher/devMachineLearning" class="image fit"><img src="images/machine.jpeg" alt="" /></a>
+									<p>Completing a Stanford ML course</p>
 									<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul> -->
