Update backend projects and apiDev
Update backend projects and apiDev

--- a/index.html
+++ b/index.html
@@ -57,10 +57,14 @@
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h2><a href="#">Rohan <br />
 									Here</a></h2>
-									<p>I've built this page to keep a track of my projects and showcase what I am working on.
+									<p>I've built this page to keep a track of my projects and present what I am working on.
 									</p>
 								</header>
-								<a href="" class="image main"><img src="images/galaxy.jpeg" alt="" /></a>
+								<a href="https://www.nasa.gov/webbfirstimages" class="image main"><img src="images/galaxy.jpeg" alt="" />
+									<div>
+										<p class="center"> Carina Nabula </p>
+									</div>
+								</a>
 								<!-- <ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul> -->
@@ -72,14 +76,27 @@
 									<header>
 										<!-- <span class="date">April 24, 2017</span> -->
 										<h2>
-											<a href="#">Reservily<br />	</a>
+											<a href="https://github.com/rohanbsher/backendProjects">Backend projects<br />	</a>
 										</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/reserve1.jpeg" alt="" /></a>
-									<p>A Hotel Reservation portal. One stop shop for all your software needs</p>
+									<a href="https://github.com/rohanbsher/backendProjects" class="image fit"><img src="images/terminal.jpeg" alt="" /></a>
+									<p>A collection of various Back End projects that I've worked on including 
+										a blog post service, a newletter regiseration service, a calculator app for BMI, and a server for generating random quotes.
+									</p>
 									<ul class="actions special">
 										<!-- <li><a href="#" class="button">Full Story</a></li> -->
 									</ul>
+								</article>
+								<article>
+									<header>
+										<!-- <span class="date">April 18, 2017</span> -->
+										<h2><a href="https://github.com/rohanbsher/typeScript">API development<br /></a></h2>
+									</header>
+									<a href="https://github.com/rohanbsher/typeScript" class="image fit"><img src="images/system.jpeg" alt="" /></a>
+									<p>I've developed a fully extensive weather api that fetches data from openWeatherAPI and displays current data using google maps api.</p>
+									<!-- <ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li>
+									</ul> -->
 								</article>
 								<article>
 									<header>
@@ -94,22 +111,11 @@
 								</article>
 								<article>
 									<header>
-										<!-- <span class="date">April 18, 2017</span> -->
-										<h2><a href="#">System Engineering<br /></a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/system.jpeg" alt="" /></a>
-									<p>How to engineer/design a system while handling scaling challenges!</p>
-									<!-- <ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul> -->
-								</article>
-								<article>
-									<header>
 										<!-- <span class="date">April 14, 2017</span> -->
 										<h2><a href="#">Machine Learning<br /></a></h2>
 									</header>
 									<a href="https://github.com/rohanbsher/devMachineLearning" class="image fit"><img src="images/machine.jpeg" alt="" /></a>
-									<p>Completing a Stanford ML course</p>
+									<p>Completing a Stanford ML course. Utilizing Jupyter notebook for Python Scripting.</p>
 									<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul> -->
