updated API dev repo link

--- a/personal.html
+++ b/personal.html
@@ -45,14 +45,22 @@
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h1>Sherpur, Punjab<br /></h1>
 									<p>I moved from sherpur, punjab to attend UofSC and pursue International Business but switched majors first semester 
-										and instead graduated with Computer Engineering.
+										and graduated with Computer Engineering.
 									</p>
 									<p>
-										I love learning for the sake of it. I think actively seeking out knowledge and applying it practically provides a framework to understand the bigger picture. This lets you build truly intutive products that people enjoy using. 
+										I love learning for the sake of it. I actively seek out knowledge and try to apply it practically. It has provided me with a framework to understand the bigger picture. I believe it helps me build truly intutive and useful products. 
 									</p>
 								</header>
 								<a href="" class="image main"><img src="images/sherpur.jpeg" alt="" /></a>
-								<p>This is where I come from. Sherpur is a village in Punjab, India with primary occupation being agriculture.</p>
+								<p>I enjoy Reading and here are some recommendations</p>
+								<ul>
+									<li>iWoz - A book on steve wozniak and his wizardy at Apple </li>
+									<li>The innovators - History of technology</li>
+									<li>Particle Physics of Non-physicists by steven pollock - Great Lectures</li>
+									<li>What you do is who you are - ben horowitz</li>									</li>
+									<li>The Startup of You - Reid Hoffman </li>	
+									<li>How to Avoid a climate disaster</li>	
+								</ul>
 							</section>
 
 					</div>
