--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									</header>
 									<a href="https://github.com/rohanbsher/backendProjects" class="image fit"><img src="images/terminal.jpeg" alt="" /></a>
 									<p>A collection of various Back End projects that I've worked on including 
-										a blog post service, a newletter regiseration service, a calculator app for BMI, and a server for generating random quotes.
+										a blog project utilizing microservices architecture, a newletter regiseration service, a calculator app for BMI, and a server for generating random quotes.
 									</p>
 									<ul class="actions special">
 										<!-- <li><a href="#" class="button">Full Story</a></li> -->
@@ -90,10 +90,10 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 18, 2017</span> -->
-										<h2><a href="https://github.com/rohanbsher/typeScript">API development<br /></a></h2>
+										<h2><a href="https://github.com/rohanbsher/apiDevelopment">API development<br /></a></h2>
 									</header>
-									<a href="https://github.com/rohanbsher/typeScript" class="image fit"><img src="images/system.jpeg" alt="" /></a>
-									<p>I've developed a fully extensive weather api that fetches data from openWeatherAPI and displays current data using google maps api.</p>
+									<a href="https://github.com/rohanbsher/apiDevelopment" class="image fit"><img src="images/system.jpeg" alt="" /></a>
+									<p>I've developed a web framework, fully integrated weather api that fetches data from openWeatherAPI and displays current data using google maps api.</p>
 									<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul> -->
