--- a/index.html
+++ b/index.html
@@ -5,122 +5,135 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Rohan</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+<head>
+	<title>Rohan</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
 
-				<!-- Intro -->
-					<div id="intro">
-						<h1>Hey <br />
-						what's up!</h1>
-						<p>Welcome to my page!</a><br />
-						</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
+<body class="is-preload">
 
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">ਰੋਹਨ | Rohan</a>
-					</header>
+	<!-- Wrapper -->
+	<div id="wrapper" class="fade-in">
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">Projects</a></li>
-							<li><a href="personal.html">Bio</a></li>
-							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
-						</ul>
-						<ul class="icons">
-							<li><a href="https://twitter.com/RohanBh38776826" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://github.com/rohanbsher" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://linkedin.com/in/rohanbhandariuofsc" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+		<!-- Intro -->
+		<div id="intro">
+			<h1>Hey <br />
+				what's up!</h1>
+			<p>Welcome to my page!</a><br />
+			</p>
+			<ul class="actions">
+				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+			</ul>
+		</div>
 
-						</ul>
-					</nav>
+		<!-- Header -->
+		<header id="header">
+			<a href="index.html" class="logo">ਰੋਹਨ | Rohan</a>
+		</header>
 
-				<!-- Main -->
-					<div id="main">
+		<!-- Nav -->
+		<nav id="nav">
+			<ul class="links">
+				<li class="active"><a href="index.html">Projects</a></li>
+				<li><a href="personal.html">Bio</a></li>
+				<!-- <li><a href="elements.html">Elements Reference</a></li> -->
+			</ul>
+			<ul class="icons">
+				<li><a href="https://twitter.com/RohanBh38776826" class="icon brands fa-twitter"><span
+							class="label">Twitter</span></a></li>
+				<li><a href="https://github.com/rohanbsher" class="icon brands fa-github"><span
+							class="label">GitHub</span></a></li>
+				<li><a href="https://linkedin.com/in/rohanbhandariuofsc" class="icon brands fa-linkedin"><span
+							class="label">linkedin</span></a></li>
 
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="#">Rohan <br />
-									Here</a></h2>
-									<p>I've built this page to keep a track of my projects and present what I am working on.
-									</p>
-								</header>
-								<a href="https://www.nasa.gov/webbfirstimages" class="image main"><img src="images/galaxy.jpeg" alt="" />
+			</ul>
+		</nav>
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- Featured Post -->
+			<article class="post featured">
+				<header class="major">
+					<!-- <span class="date">April 25, 2017</span> -->
+					<h2><a href="#">Rohan <br />
+							Here</a></h2>
+					<p>I've built this page to keep a track of my projects and present what I am working on.
+					</p>
+				</header>
+				<!-- <a href="https://www.nasa.gov/webbfirstimages" class="image main"><img src="images/galaxy.jpeg" alt="" />
 									<div>
 										<p class="center"> Carina Nabula </p>
 									</div>
-								</a>
-								<!-- <ul class="actions special">
+								</a> -->
+				<!-- <ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul> -->
-							</article>
+			</article>
 
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<!-- <span class="date">April 24, 2017</span> -->
-										<h2>
-											<a href="https://github.com/rohanbsher/backendProjects">Backend projects<br />	</a>
-										</h2>
-									</header>
-									<a href="https://github.com/rohanbsher/backendProjects" class="image fit"><img src="images/terminal.jpeg" alt="" /></a>
-									<p>A collection of various Back End projects that I've worked on including 
-										a blog project utilizing microservices architecture, a newletter regiseration service, a calculator app for BMI, and a server for generating random quotes.
-									</p>
-									<ul class="actions special">
-										<!-- <li><a href="#" class="button">Full Story</a></li> -->
-									</ul>
-								</article>
-								<article>
-									<header>
-										<!-- <span class="date">April 18, 2017</span> -->
-										<h2><a href="https://github.com/rohanbsher/apiDevelopment">API development<br /></a></h2>
-									</header>
-									<a href="https://github.com/rohanbsher/apiDevelopment" class="image fit"><img src="images/system.jpeg" alt="" /></a>
-									<p>I've developed a web framework, fully integrated weather api that fetches data from openWeatherAPI and displays current data using google maps api.</p>
-									<!-- <ul class="actions special">
+			<!-- Posts -->
+			<section class="posts">
+				<article>
+					<header>
+						<!-- <span class="date">April 24, 2017</span> -->
+						<h2>
+							<a href="https://github.com/rohanbsher/backendProjects">Backend projects<br /> </a>
+						</h2>
+					</header>
+					<a href="https://github.com/rohanbsher/backendProjects" class="image fit"><img
+							src="images/terminal.jpeg" alt="" /></a>
+					<p>A collection of various Back End projects that I've worked on including
+						a blog project utilizing microservices architecture, a newletter regiseration service, a
+						calculator app for BMI, and a server for generating random quotes.
+					</p>
+					<ul class="actions special">
+						<!-- <li><a href="#" class="button">Full Story</a></li> -->
+					</ul>
+				</article>
+				<article>
+					<header>
+						<!-- <span class="date">April 18, 2017</span> -->
+						<h2><a href="https://github.com/rohanbsher/apiDevelopment">API development<br /></a></h2>
+					</header>
+					<a href="https://github.com/rohanbsher/apiDevelopment" class="image fit"><img
+							src="images/system.jpeg" alt="" /></a>
+					<p>I've developed a web framework, fully integrated weather api that fetches data from
+						openWeatherAPI and displays current data using google maps api.</p>
+					<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul> -->
-								</article>
-								<article>
-									<header>
-										<!-- <span class="date">April 22, 2017</span> -->
-										<h2><a href="#">Algorithms<br /></a></h2>
-									</header>
-									<a href="https://github.com/rohanbsher/algorithms" class="image fit"><img src="images/algos.jpeg" alt="" /></a>
-									<p>Working models for Various Sorting Algorithms.</p>
-									<!-- <ul class="actions special">
+				</article>
+				<article>
+					<header>
+						<!-- <span class="date">April 22, 2017</span> -->
+						<h2><a href="#">Algorithms<br /></a></h2>
+					</header>
+					<a href="https://github.com/rohanbsher/algorithms" class="image fit"><img src="images/algos.jpeg"
+							alt="" /></a>
+					<p>Working models for Various Sorting Algorithms.</p>
+					<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul> -->
-								</article>
-								<article>
-									<header>
-										<!-- <span class="date">April 14, 2017</span> -->
-										<h2><a href="#">Machine Learning<br /></a></h2>
-									</header>
-									<a href="https://github.com/rohanbsher/devMachineLearning" class="image fit"><img src="images/machine.jpeg" alt="" /></a>
-									<p>Completing a Stanford ML course. Utilizing Jupyter notebook for Python Scripting.</p>
-									<!-- <ul class="actions special">
+				</article>
+				<article>
+					<header>
+						<!-- <span class="date">April 14, 2017</span> -->
+						<h2><a href="#">Machine Learning<br /></a></h2>
+					</header>
+					<a href="https://github.com/rohanbsher/devMachineLearning" class="image fit"><img
+							src="images/machine.jpeg" alt="" /></a>
+					<p>Completing a Stanford ML course. Utilizing Jupyter notebook for Python Scripting.</p>
+					<!-- <ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul> -->
-								</article>
-								<!-- <article>
+				</article>
+				<!-- <article>
 									<header>
 										<span class="date">April 11, 2017</span>
 										<h2><a href="#">Odio magna<br />
@@ -132,7 +145,7 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article> -->
-								<!-- <article>
+				<!-- <article>
 									<header>
 										<span class="date">April 7, 2017</span>
 										<h2><a href="#">Augue lorem<br />
@@ -144,13 +157,13 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article> -->
-							</section>
+			</section>
 
-						<!-- Footer -->
-							<!-- <footer>
+			<!-- Footer -->
+			<!-- <footer>
 								<div class="pagination"> -->
-									<!--<a href="#" class="previous">Prev</a>-->
-									<!-- <a href="#" class="page active">1</a>
+			<!--<a href="#" class="previous">Prev</a>-->
+			<!-- <a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
@@ -161,12 +174,12 @@
 								</div>
 							</footer> -->
 
-					</div>
+		</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<!-- <form method="post" action="#">
+		<!-- Footer -->
+		<footer id="footer">
+			<section>
+				<!-- <form method="post" action="#">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -185,16 +198,19 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form> -->
-							<section>
-								<h3 style="text-align: center;">Socials</h3>
-								<ul class="icons alt", style="text-align: center;">
-									<li><a href="https://twitter.com/RohanBh38776826" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://github.com/rohanbsher" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://linkedin.com/in/rohanbhandariuofsc" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
-								</ul>
-							</section>
-						</section>
-						<!-- <section class="split contact">
+				<section>
+					<h3 style="text-align: center;">Socials</h3>
+					<ul class="icons alt" , style="text-align: center;">
+						<li><a href="https://twitter.com/RohanBh38776826" class="icon brands fa-twitter"><span
+									class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/rohanbsher" class="icon brands fa-github"><span
+									class="label">GitHub</span></a></li>
+						<li><a href="https://linkedin.com/in/rohanbhandariuofsc" class="icon brands fa-linkedin"><span
+									class="label">linkedin</span></a></li>
+					</ul>
+				</section>
+			</section>
+			<!-- <section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
 								<p>1234 Somewhere Road #87257<br />
@@ -209,32 +225,35 @@
 								<p><a href="#">info@untitled.tld</a></p>
 							</section>
 							<section> -->
-								<!-- <h3>Social</h3> -->
-								<!-- <ul class="icons alt">
+			<!-- <h3>Social</h3> -->
+			<!-- <ul class="icons alt">
 									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section> -->
-						<!-- </section> -->
-					</footer>
+			<!-- </section> -->
+		</footer>
 
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Rohan</li></ul>
-					</div>
+		<!-- Copyright -->
+		<div id="copyright">
+			<ul>
+				<li>&copy; Rohan</li>
+			</ul>
+		</div>
 
-			</div>
+	</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
