--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<article class="post featured">
 				<header class="major">
 					<!-- <span class="date">April 25, 2017</span> -->
-					<h2><a href="#">Rohan <br />
+					<h2><a href="https://github.com/rohanbsher">Rohan <br />
 							Here</a></h2>
 					<p>I've built this page to keep a track of my projects and present what I am working on.
 					</p>
@@ -81,21 +81,14 @@
 			<section class="posts">
 				<article>
 					<header>
-						<!-- <span class="date">April 24, 2017</span> -->
-						<h2>
-							<a href="https://github.com/rohanbsher/backendProjects">Backend projects<br /> </a>
-						</h2>
+						<h2><a href="https://github.com/rohanbsher/microservicesProd">MicroServices<br /></a></h2>
 					</header>
-					<a href="https://github.com/rohanbsher/backendProjects" class="image fit"><img
-							src="images/terminal.jpeg" alt="" /></a>
-					<p>A collection of various Back End projects that I've worked on including
-						a blog project utilizing microservices architecture, a newletter regiseration service, a
-						calculator app for BMI, and a server for generating random quotes.
-					</p>
-					<ul class="actions special">
-						<!-- <li><a href="#" class="button">Full Story</a></li> -->
-					</ul>
+					<a href="https://github.com/rohanbsher/microservicesProd" class="image fit"><img src="images/micro.png"
+						alt="" /></a>
+				<p>A production quality project that utilizes Microservices architecture.</p>
+				<p>Utilizing Google Kubernetes Engine to deploy and host the services.</p>
 				</article>
+				
 				<article>
 					<header>
 						<!-- <span class="date">April 18, 2017</span> -->
@@ -112,7 +105,7 @@
 				<article>
 					<header>
 						<!-- <span class="date">April 22, 2017</span> -->
-						<h2><a href="#">Algorithms<br /></a></h2>
+						<h2><a href="https://github.com/rohanbsher/algorithms">Algorithms<br /></a></h2>
 					</header>
 					<a href="https://github.com/rohanbsher/algorithms" class="image fit"><img src="images/algos.jpeg"
 							alt="" /></a>
@@ -123,16 +116,29 @@
 				</article>
 				<article>
 					<header>
-						<!-- <span class="date">April 14, 2017</span> -->
+						<!-- <span class="date">April 24, 2017</span> -->
+						<h2>
+							<a href="https://github.com/rohanbsher/backendProjects">Backend projects<br /> </a>
+						</h2>
+					</header>
+					<a href="https://github.com/rohanbsher/backendProjects" class="image fit"><img
+							src="images/terminal.jpeg" alt="" /></a>
+					<p>A collection of various Back End projects that I've worked on including
+						a blog project utilizing microservices architecture, a newletter regiseration service, a
+						calculator app for BMI, and a server for generating random quotes.
+					</p>
+					<ul class="actions special">
+						<!-- <li><a href="#" class="button">Full Story</a></li> -->
+					</ul>
+				</article>
+				<!-- <article>
+					<header>
 						<h2><a href="#">Machine Learning<br /></a></h2>
 					</header>
 					<a href="https://github.com/rohanbsher/devMachineLearning" class="image fit"><img
 							src="images/machine.jpeg" alt="" /></a>
 					<p>Completing a Stanford ML course. Utilizing Jupyter notebook for Python Scripting.</p>
-					<!-- <ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul> -->
-				</article>
+				</article> -->
 				<!-- <article>
 									<header>
 										<span class="date">April 11, 2017</span>
