--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 
 <head>
@@ -23,10 +19,8 @@
 
 		<!-- Intro -->
 		<div id="intro">
-			<h1>Hey <br />
-				what's up!</h1>
-			<p>Welcome to my page!</a><br />
-			</p>
+			<h1>Hello, I'm Rohan.</h1>
+			<p>Welcome to my profile, checkout some of my project work.</p>
 			<ul class="actions">
 				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 			</ul>
@@ -34,7 +28,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">ਰੋਹਨ | Rohan</a>
+			<a class="logo">ਰੋਹਨ | Rohan</a>
 		</header>
 
 		<!-- Nav -->
@@ -50,8 +44,7 @@
 				<li><a href="https://github.com/rohanbsher" class="icon brands fa-github"><span
 							class="label">GitHub</span></a></li>
 				<li><a href="https://linkedin.com/in/rohanbhandariuofsc" class="icon brands fa-linkedin"><span
-							class="label">linkedin</span></a></li>
-
+							class="label">LinkedIn</span></a></li>
 			</ul>
 		</nav>
 
@@ -61,149 +54,57 @@
 			<!-- Featured Post -->
 			<article class="post featured">
 				<header class="major">
-					<!-- <span class="date">April 25, 2017</span> -->
 					<h2><a href="https://github.com/rohanbsher">Rohan <br />
 							Here</a></h2>
-					<p>I've built this page to keep a track of my projects and present what I am working on.
-					</p>
+					<p>I've built this page to keep track of my projects and share what I'm working on.</p>
 				</header>
-				<!-- <a href="https://www.nasa.gov/webbfirstimages" class="image main"><img src="images/galaxy.jpeg" alt="" />
-									<div>
-										<p class="center"> Carina Nabula </p>
-									</div>
-								</a> -->
-				<!-- <ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul> -->
 			</article>
 
 			<!-- Posts -->
 			<section class="posts">
 				<article>
 					<header>
-						<h2><a href="https://github.com/rohanbsher/microservicesProd">MicroServices<br /></a></h2>
+						<h2><a href="https://github.com/rohanbsher/microservicesProd">Microservices<br /></a></h2>
 					</header>
-					<a href="https://github.com/rohanbsher/microservicesProd" class="image fit"><img src="images/micro.png"
-						alt="" /></a>
-				<p>A production quality project that utilizes Microservices architecture.</p>
-				<p>Utilizing Google Kubernetes Engine to deploy and host the services.</p>
+					<a href="https://github.com/rohanbsher/microservicesProd" class="image fit"><img
+							src="images/micro.png" alt="" /></a>
+					<p>A production-quality project that utilizes Microservices architecture.</p>
+					<p>Utilizing Google Kubernetes Engine to deploy and host the services.</p>
 				</article>
-				
+
 				<article>
 					<header>
-						<!-- <span class="date">April 18, 2017</span> -->
-						<h2><a href="https://github.com/rohanbsher/apiDevelopment">API development<br /></a></h2>
+						<h2><a href="https://github.com/rohanbsher/apiDevelopment">API Development<br /></a></h2>
 					</header>
 					<a href="https://github.com/rohanbsher/apiDevelopment" class="image fit"><img
 							src="images/system.jpeg" alt="" /></a>
-					<p>I've developed a web framework, fully integrated weather api that fetches data from
-						openWeatherAPI and displays current data using google maps api.</p>
-					<!-- <ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul> -->
+					<p>I've developed a web framework, fully integrated weather API that fetches data from
+						OpenWeatherAPI and displays current data using Google Maps API.</p>
 				</article>
 				<article>
 					<header>
-						<!-- <span class="date">April 22, 2017</span> -->
 						<h2><a href="https://github.com/rohanbsher/algorithms">Algorithms<br /></a></h2>
 					</header>
 					<a href="https://github.com/rohanbsher/algorithms" class="image fit"><img src="images/algos.jpeg"
 							alt="" /></a>
 					<p>Working models for Various Sorting Algorithms.</p>
-					<!-- <ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul> -->
 				</article>
 				<article>
 					<header>
-						<!-- <span class="date">April 24, 2017</span> -->
 						<h2>
-							<a href="https://github.com/rohanbsher/backendProjects">Backend projects<br /> </a>
+							<a href="https://github.com/rohanbsher/backendProjects">Backend Projects<br /> </a>
 						</h2>
 					</header>
 					<a href="https://github.com/rohanbsher/backendProjects" class="image fit"><img
 							src="images/terminal.jpeg" alt="" /></a>
-					<p>A collection of various Back End projects that I've worked on including
-						a blog project utilizing microservices architecture, a newletter regiseration service, a
-						calculator app for BMI, and a server for generating random quotes.
-					</p>
-					<ul class="actions special">
-						<!-- <li><a href="#" class="button">Full Story</a></li> -->
-					</ul>
+					<p>A collection of various Back-End projects that I've worked on, including a blog project utilizing
+						Microservices architecture, a newsletter registration service, a calculator app for BMI, and a
+						server for generating random quotes.</p>
 				</article>
-				<!-- <article>
-					<header>
-						<h2><a href="#">Machine Learning<br /></a></h2>
-					</header>
-					<a href="https://github.com/rohanbsher/devMachineLearning" class="image fit"><img
-							src="images/machine.jpeg" alt="" /></a>
-					<p>Completing a Stanford ML course. Utilizing Jupyter notebook for Python Scripting.</p>
-				</article> -->
-				<!-- <article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article> -->
-				<!-- <article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article> -->
 			</section>
 
 			<!-- Footer -->
-			<!-- <footer>
-								<div class="pagination"> -->
-			<!--<a href="#" class="previous">Prev</a>-->
-			<!-- <a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer> -->
-
-		</div>
-
-		<!-- Footer -->
-		<footer id="footer">
-			<section>
-				<!-- <form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form> -->
+			<footer id="footer">
 				<section>
 					<h3 style="text-align: center;">Socials</h3>
 					<ul class="icons alt" , style="text-align: center;">
@@ -212,53 +113,30 @@
 						<li><a href="https://github.com/rohanbsher" class="icon brands fa-github"><span
 									class="label">GitHub</span></a></li>
 						<li><a href="https://linkedin.com/in/rohanbhandariuofsc" class="icon brands fa-linkedin"><span
-									class="label">linkedin</span></a></li>
+									class="label">LinkedIn</span></a></li>
 					</ul>
 				</section>
-			</section>
-			<!-- <section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section> -->
-			<!-- <h3>Social</h3> -->
-			<!-- <ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section> -->
-			<!-- </section> -->
-		</footer>
+			</footer>
 
-		<!-- Copyright -->
-		<div id="copyright">
-			<ul>
-				<li>&copy; Rohan</li>
-			</ul>
+			<!-- Copyright -->
+			<div id="copyright">
+				<ul>
+					<li>&copy; Rohan</li>
+				</ul>
+			</div>
+
 		</div>
 
-	</div>
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+	</div>
 
 </body>
 
