--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a class="logo">ਰੋਹਨ | Rohan</a>
+			<a class="logo">ਰੋਹਨ</a>
 		</header>
 
 		<!-- Nav -->
@@ -54,8 +54,7 @@
 			<!-- Featured Post -->
 			<article class="post featured">
 				<header class="major">
-					<h2><a href="https://github.com/rohanbsher">Rohan <br />
-							Here</a></h2>
+					<h2><a href="https://github.com/rohanbsher">profile</a></h2>
 					<p>I've built this page to keep track of my projects and share what I'm working on.</p>
 				</header>
 			</article>
